pathbar: Stop adding extra space to buttons
The minimum width on the pathbar buttons causes a single character
directory to have extra space at the end, making it lopsided
and mismatched with the other buttons.

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -63,6 +63,7 @@
 
 #NautilusPathButton {
   margin: 3px;
+  min-width: 8px;
   border-radius: 4px;
   padding-top: 0px;
   padding-bottom: 0px;
